<resources>

    <string name="app_name">RoomStudentsManagement</string>
    <string name="display_students">List of students</string>
    <string name="action_settings">Settings</string>
    <string name="hint_student">Student…</string>
    <string name="hint_firstname">First name…</string>
    <string name="hint_lastname">Last name…</string>
    <string name="hint_phone_number">Phone number…</string>
    <string name="hint_email">Email…</string>
    <string name="buttonSave">Save</string>
    <string name="empty_not_saved">Student not saved because it is
empty.</string>
    <string name="add_student">Add student</string>
</resources>
